chor(html): make html great again

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-:)
+<!DOCTYPE html>
+<html>
+	<head>
+		  <meta charset="UTF-8">
+		    <title>outof-coffee<title>
+	</head>
+	<body>
+		  :)
+	</body>
+</html>
