--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		  <meta charset="UTF-8">
-		    <title>outof-coffee<title>
+		    <title>outof-coffee</title>
 	</head>
 	<body>
 		  :)
